project(libc C ASM)

set(SOURCES
    argz/argz_add.c
    argz/argz_add_sep.c
    argz/argz_append.c
    argz/argz_count.c
    argz/argz_create.c
    argz/argz_create_sep.c
    argz/argz_delete.c
    argz/argz_extract.c
    argz/argz_insert.c
    argz/argz_next.c
    argz/argz_replace.c
    argz/argz_stringify.c
    argz/buf_findstr.c
    argz/envz_add.c
    argz/envz_entry.c
    argz/envz_get.c
    argz/envz_merge.c
    argz/envz_remove.c
    argz/envz_strip.c
    ctype/categories.c
    ctype/ctype_.c
    ctype/isalnum.c
    ctype/isalnum_l.c
    ctype/isalpha.c
    ctype/isalpha_l.c
    ctype/isascii.c
    ctype/isascii_l.c
    ctype/isblank.c
    ctype/isblank_l.c
    ctype/iscntrl.c
    ctype/iscntrl_l.c
    ctype/isdigit.c
    ctype/isdigit_l.c
    ctype/islower.c
    ctype/islower_l.c
    ctype/isprint.c
    ctype/isprint_l.c
    ctype/ispunct.c
    ctype/ispunct_l.c
    ctype/isspace.c
    ctype/isspace_l.c
    ctype/isupper.c
    ctype/isupper_l.c
    ctype/iswalnum.c
    ctype/iswalnum_l.c
    ctype/iswalpha.c
    ctype/iswalpha_l.c
    ctype/iswblank.c
    ctype/iswblank_l.c
    ctype/iswcntrl.c
    ctype/iswcntrl_l.c
    ctype/iswctype.c
    ctype/iswctype_l.c
    ctype/iswdigit.c
    ctype/iswdigit_l.c
    ctype/iswgraph.c
    ctype/iswgraph_l.c
    ctype/iswlower.c
    ctype/iswlower_l.c
    ctype/iswprint.c
    ctype/iswprint_l.c
    ctype/iswpunct.c
    ctype/iswpunct_l.c
    ctype/iswspace.c
    ctype/iswspace_l.c
    ctype/iswupper.c
    ctype/iswupper_l.c
    ctype/iswxdigit.c
    ctype/iswxdigit_l.c
    ctype/isxdigit.c
    ctype/isxdigit_l.c
    ctype/jp2uc.c
    ctype/toascii.c
    ctype/toascii_l.c
    ctype/tolower.c
    ctype/tolower_l.c
    ctype/toupper.c
    ctype/toupper_l.c
    ctype/towctrans.c
    ctype/towctrans_l.c
    ctype/towlower.c
    ctype/towlower_l.c
    ctype/towupper.c
    ctype/towupper_l.c
    ctype/wctrans.c
    ctype/wctrans_l.c
    ctype/wctype.c
    ctype/wctype_l.c
    errno/errno.c
    locale/duplocale.c
    locale/freelocale.c
    locale/lctype.c
    locale/lmessages.c
    locale/lmonetary.c
    locale/lnumeric.c
    locale/locale.c
    locale/localeconv.c
    locale/newlocale.c
    locale/nl_langinfo.c
    locale/timelocal.c
    locale/uselocale.c
    misc/__dprintf.c
    misc/ffs.c
    misc/fini.c
    misc/init.c
    misc/unctrl.c
    posix/creat.c
    posix/execl.c
    posix/execle.c
    posix/execlp.c
    posix/execv.c
    posix/execvp.c
    posix/isatty.c
    posix/popen.c
    posix/glob.c
    posix/popen.c
    posix/regcomp.c
    posix/regerror.c
    posix/regexec.c
    posix/regfree.c
    posix/sleep.c
    posix/usleep.c
    posix/wordexp.c
    posix/wordfree.c
    reent/closer.c
    reent/execr.c
    reent/fcntlr.c
    reent/fstatr.c
    reent/getreent.c
    reent/gettimeofdayr.c
    reent/impure.c
    reent/isattyr.c
    reent/linkr.c
    reent/lseekr.c
    reent/mkdirr.c
    reent/openr.c
    reent/readr.c
    reent/reent.c
    reent/renamer.c
    reent/signalr.c
    reent/signgam.c
    reent/statr.c
    reent/timesr.c
    reent/unlinkr.c
    reent/writer.c
    search/bsd_qsort_r.c
    search/bsearch.c
    search/hash.c
    search/hash_bigkey.c
    search/hash_buf.c
    search/hash_func.c
    search/hash_log2.c
    search/hash_page.c
    search/hcreate.c
    search/hcreate_r.c
    search/qsort.c
    search/qsort_r.c
    search/tdelete.c
    search/tdestroy.c
    search/tfind.c
    search/tsearch.c
    search/twalk.c
    signal/psignal.c
    ssp/chk_fail.c
    ssp/gets_chk.c
    ssp/memcpy_chk.c
    ssp/memmove_chk.c
    ssp/mempcpy_chk.c
    ssp/memset_chk.c
    ssp/snprintf_chk.c
    ssp/sprintf_chk.c
    ssp/stack_protector.c
    ssp/stpcpy_chk.c
    ssp/stpncpy_chk.c
    ssp/strcat_chk.c
    ssp/strcpy_chk.c
    ssp/strncat_chk.c
    ssp/strncpy_chk.c
    ssp/vsnprintf_chk.c
    ssp/vsprintf_chk.c
    stdio/asiprintf.c
    stdio/asniprintf.c
    stdio/asnprintf.c
    stdio/asprintf.c
    stdio/clearerr.c
    stdio/clearerr_u.c
    stdio/diprintf.c
    stdio/dprintf.c
    stdio/fclose.c
    stdio/fcloseall.c
    stdio/fdopen.c
    stdio/feof.c
    stdio/feof_u.c
    stdio/ferror.c
    stdio/ferror_u.c
    stdio/fflush.c
    stdio/fflush_u.c
    stdio/fgetc.c
    stdio/fgetc_u.c
    stdio/fgetpos.c
    stdio/fgets.c
    stdio/fgets_u.c
    stdio/fgetwc.c
    stdio/fgetwc_u.c
    stdio/fgetws.c
    stdio/fgetws_u.c
    stdio/fileno.c
    stdio/fileno_u.c
    stdio/findfp.c
    stdio/fiprintf.c
    stdio/fiscanf.c
    stdio/flags.c
    stdio/fmemopen.c
    stdio/fopen.c
    stdio/fopencookie.c
    stdio/fprintf.c
    stdio/fpurge.c
    stdio/fputc.c
    stdio/fputc_u.c
    stdio/fputs.c
    stdio/fputs_u.c
    stdio/fputwc.c
    stdio/fputwc_u.c
    stdio/fputws.c
    stdio/fputws_u.c
    stdio/fread.c
    stdio/fread_u.c
    stdio/freopen.c
    stdio/fscanf.c
    stdio/fseek.c
    stdio/fseeko.c
    stdio/fsetlocking.c
    stdio/fsetpos.c
    stdio/ftell.c
    stdio/ftello.c
    stdio/funopen.c
    stdio/fvwrite.c
    stdio/fwalk.c
    stdio/fwide.c
    stdio/fwprintf.c
    stdio/fwrite.c
    stdio/fwrite_u.c
    stdio/fwscanf.c
    stdio/getc.c
    stdio/getc_u.c
    stdio/getchar.c
    stdio/getchar_u.c
    stdio/getdelim.c
    stdio/getline.c
    stdio/gets.c
    stdio/getw.c
    stdio/getwc.c
    stdio/getwc_u.c
    stdio/getwchar.c
    stdio/getwchar_u.c
    stdio/iprintf.c
    stdio/iscanf.c
    stdio/makebuf.c
    stdio/mktemp.c
    stdio/open_memstream.c
    stdio/perror.c
    stdio/printf.c
    stdio/putc.c
    stdio/putc_u.c
    stdio/putchar.c
    stdio/putchar_u.c
    stdio/puts.c
    stdio/putw.c
    stdio/putwc.c
    stdio/putwc_u.c
    stdio/putwchar.c
    stdio/putwchar_u.c
    stdio/refill.c
    stdio/remove.c
    stdio/rename.c
    stdio/rewind.c
    stdio/rget.c
    stdio/scanf.c
    stdio/sccl.c
    stdio/setbuf.c
    stdio/setbuffer.c
    stdio/setlinebuf.c
    stdio/setvbuf.c
    stdio/siprintf.c
    stdio/siscanf.c
    stdio/sniprintf.c
    stdio/snprintf.c
    stdio/sprintf.c
    stdio/sscanf.c
    stdio/stdio.c
    stdio/stdio_ext.c
    stdio/svfiprintf.c
    stdio/svfiscanf.c
    stdio/svfiwprintf.c
    stdio/svfiwscanf.c
    stdio/svfprintf.c
    stdio/svfscanf.c
    stdio/svfwprintf.c
    stdio/svfwscanf.c
    stdio/swprintf.c
    stdio/swscanf.c
    stdio/tmpfile.c
    stdio/tmpnam.c
    stdio/ungetc.c
    stdio/ungetwc.c
    stdio/vasiprintf.c
    stdio/vasniprintf.c
    stdio/vasnprintf.c
    stdio/vasprintf.c
    stdio/vdiprintf.c
    stdio/vdprintf.c
    stdio/vfiprintf.c
    stdio/vfiscanf.c
    stdio/vfiwprintf.c
    stdio/vfiwscanf.c
    stdio/vfprintf.c
    stdio/vfscanf.c
    stdio/vfwprintf.c
    stdio/vfwscanf.c
    stdio/viprintf.c
    stdio/viscanf.c
    stdio/vprintf.c
    stdio/vscanf.c
    stdio/vsiprintf.c
    stdio/vsiscanf.c
    stdio/vsniprintf.c
    stdio/vsnprintf.c
    stdio/vsprintf.c
    stdio/vsscanf.c
    stdio/vswprintf.c
    stdio/vswscanf.c
    stdio/vwprintf.c
    stdio/vwscanf.c
    stdio/wbuf.c
    stdio/wprintf.c
    stdio/wscanf.c
    stdio/wsetup.c
    stdlib/_Exit.c
    stdlib/__adjust.c
    stdlib/__atexit.c
    stdlib/__call_atexit.c
    stdlib/__exp10.c
    stdlib/__ten_mu.c
    stdlib/a64l.c
    stdlib/abort.c
    stdlib/abs.c
    stdlib/aligned_alloc.c
    stdlib/arc4random.c
    stdlib/arc4random_uniform.c
    stdlib/assert.c
    stdlib/atexit.c
    stdlib/atof.c
    stdlib/atoff.c
    stdlib/atoi.c
    stdlib/atol.c
    stdlib/atoll.c
    stdlib/btowc.c
    stdlib/calloc.c
    stdlib/cxa_atexit.c
    stdlib/cxa_finalize.c
    stdlib/div.c
    stdlib/dlmalloc.c
    stdlib/drand48.c
    stdlib/dtoa.c
    stdlib/dtoastub.c
    stdlib/ecvtbuf.c
    stdlib/efgcvt.c
    stdlib/environ.c
    stdlib/envlock.c
    stdlib/eprintf.c
    stdlib/erand48.c
    stdlib/exit.c
    stdlib/gdtoa-gethex.c
    stdlib/gdtoa-hexnan.c
    stdlib/getenv.c
    stdlib/getenv_r.c
    stdlib/getopt.c
    stdlib/getprogname.c
    stdlib/getsubopt.c
    stdlib/imaxabs.c
    stdlib/imaxdiv.c
    stdlib/itoa.c
    stdlib/jrand48.c
    stdlib/l64a.c
    stdlib/labs.c
    stdlib/lcong48.c
    stdlib/ldiv.c
    stdlib/ldtoa.c
    stdlib/llabs.c
    stdlib/lldiv.c
    stdlib/lrand48.c
    stdlib/malign.c
    stdlib/malloc.c
    stdlib/mblen.c
    stdlib/mblen_r.c
    stdlib/mbrlen.c
    stdlib/mbrtowc.c
    stdlib/mbsinit.c
    stdlib/mbsnrtowcs.c
    stdlib/mbsrtowcs.c
    stdlib/mbstowcs.c
    stdlib/mbstowcs_r.c
    stdlib/mbtowc.c
    stdlib/mbtowc_r.c
    stdlib/mlock.c
    stdlib/mprec.c
    stdlib/mrand48.c
    stdlib/msize.c
    stdlib/mstats.c
    stdlib/mtrim.c
    stdlib/nrand48.c
    stdlib/on_exit.c
    stdlib/on_exit_args.c
    stdlib/putenv.c
    stdlib/putenv_r.c
    stdlib/quick_exit.c
    stdlib/rand.c
    stdlib/rand48.c
    stdlib/rand_r.c
    stdlib/random.c
    stdlib/realloc.c
    stdlib/reallocarray.c
    stdlib/reallocf.c
    stdlib/rpmatch.c
    stdlib/sb_charsets.c
    stdlib/seed48.c
    stdlib/setenv.c
    stdlib/setenv_r.c
    stdlib/srand48.c
    stdlib/strtod.c
    stdlib/strtodg.c
    stdlib/strtoimax.c
    stdlib/strtol.c
    stdlib/strtold.c
    stdlib/strtoll.c
    stdlib/strtoll_r.c
    stdlib/strtorx.c
    stdlib/strtoul.c
    stdlib/strtoull.c
    stdlib/strtoull_r.c
    stdlib/strtoumax.c
    stdlib/system.c
    stdlib/utoa.c
    stdlib/valloc.c
    stdlib/wcrtomb.c
    stdlib/wcsnrtombs.c
    stdlib/wcsrtombs.c
    stdlib/wcstod.c
    stdlib/wcstoimax.c
    stdlib/wcstol.c
    stdlib/wcstold.c
    stdlib/wcstoll.c
    stdlib/wcstoll_r.c
    stdlib/wcstombs.c
    stdlib/wcstombs_r.c
    stdlib/wcstoul.c
    stdlib/wcstoull.c
    stdlib/wcstoull_r.c
    stdlib/wcstoumax.c
    stdlib/wctob.c
    stdlib/wctomb.c
    stdlib/wctomb_r.c
    string/bcmp.c
    string/bcopy.c
    string/bzero.c
    string/explicit_bzero.c
    string/ffsl.c
    string/ffsll.c
    string/fls.c
    string/flsl.c
    string/flsll.c
    string/gnu_basename.c
    string/index.c
    string/memccpy.c
    string/memchr.c
    string/memcmp.c
    string/memcpy.c
    string/memmem.c
    string/memmove.c
    string/mempcpy.c
    string/memrchr.c
    string/memset.c
    string/rawmemchr.c
    string/rindex.c
    string/stpcpy.c
    string/stpncpy.c
    string/strcasecmp.c
    string/strcasecmp_l.c
    string/strcasestr.c
    string/strcat.c
    string/strchr.c
    string/strchrnul.c
    string/strcmp.c
    string/strcoll.c
    string/strcoll_l.c
    string/strcpy.c
    string/strcspn.c
    string/strdup.c
    string/strdup_r.c
    string/strerror.c
    string/strerror_r.c
    string/strlcat.c
    string/strlcpy.c
    string/strlen.c
    string/strlwr.c
    string/strncasecmp.c
    string/strncasecmp_l.c
    string/strncat.c
    string/strncmp.c
    string/strncpy.c
    string/strndup.c
    string/strndup_r.c
    string/strnlen.c
    string/strnstr.c
    string/strpbrk.c
    string/strrchr.c
    string/strsep.c
    string/strsignal.c
    string/strspn.c
    string/strstr.c
    string/strtok.c
    string/strtok_r.c
    string/strupr.c
    string/strverscmp.c
    string/strxfrm.c
    string/strxfrm_l.c
    string/swab.c
    string/timingsafe_bcmp.c
    string/timingsafe_memcmp.c
    string/u_strerr.c
    string/wcpcpy.c
    string/wcpncpy.c
    string/wcscasecmp.c
    string/wcscasecmp_l.c
    string/wcscat.c
    string/wcschr.c
    string/wcscmp.c
    string/wcscoll.c
    string/wcscoll_l.c
    string/wcscpy.c
    string/wcscspn.c
    string/wcsdup.c
    string/wcslcat.c
    string/wcslcpy.c
    string/wcslen.c
    string/wcsncasecmp.c
    string/wcsncasecmp_l.c
    string/wcsncat.c
    string/wcsncmp.c
    string/wcsncpy.c
    string/wcsnlen.c
    string/wcspbrk.c
    string/wcsrchr.c
    string/wcsspn.c
    string/wcsstr.c
    string/wcstok.c
    string/wcswidth.c
    string/wcsxfrm.c
    string/wcsxfrm_l.c
    string/wcwidth.c
    string/wmemchr.c
    string/wmemcmp.c
    string/wmemcpy.c
    string/wmemmove.c
    string/wmempcpy.c
    string/wmemset.c
    string/xpg_strerror_r.c
    time/asctime.c
    time/asctime_r.c
    time/clock.c
    time/ctime.c
    time/ctime_r.c
    time/difftime.c
    time/gettzinfo.c
    time/gmtime.c
    time/gmtime_r.c
    time/lcltime.c
    time/lcltime_r.c
    time/mktime.c
    time/month_lengths.c
    time/strftime.c
    time/strptime.c
    time/time.c
    time/tzcalc_limits.c
    time/tzlock.c
    time/tzset.c
    time/tzset_r.c
    time/tzvars.c
    time/wcsftime.c
    unix/basename.c
    unix/dirname.c
    unix/getpwent.c
    unix/pread.c
    unix/pwrite.c
)

set(POSIX_SOURCES
    posix/collate.c
    posix/collcmp.c
)
# posix/fnmatch.c
# posix/engine.c

# files in the posix/ subdirectory need to have an extra include
foreach(_x IN ITEMS ${POSIX_SOURCES})
    set_source_files_properties(${_x} PROPERTIES COMPILE_FLAGS -I${CMAKE_CURRENT_SOURCE_DIR}/posix)
endforeach()
set(SOURCES ${SOURCES} ${POSIX_SOURCES})

set(SOURCES
    ${SOURCES}
    machine/x86_64/memcpy.S
    machine/x86_64/memset.S
    machine/x86_64/setjmp.S
)

set(SOURCES
    ${SOURCES}
    sys/dogfood/access.c
    sys/dogfood/syscall.S
    sys/dogfood/syscall_wrappers.c
    sys/dogfood/lseek.c
    sys/dogfood/opendir.c
    sys/dogfood/readdir.c
    sys/dogfood/closedir.c
    sys/dogfood/rewinddir.c
    sys/dogfood/termios.c
    sys/dogfood/unimplemented.c
)

set(SOURCES_notyet
    iconv/ccs/big5.c
    iconv/ccs/ccsbi.c
    iconv/ccs/cns11643_plane1.c
    iconv/ccs/cns11643_plane14.c
    iconv/ccs/cns11643_plane2.c
    iconv/ccs/cp775.c
    iconv/ccs/cp850.c
    iconv/ccs/cp852.c
    iconv/ccs/cp855.c
    iconv/ccs/cp866.c
    iconv/ccs/iso_8859_1.c
    iconv/ccs/iso_8859_10.c
    iconv/ccs/iso_8859_11.c
    iconv/ccs/iso_8859_13.c
    iconv/ccs/iso_8859_14.c
    iconv/ccs/iso_8859_15.c
    iconv/ccs/iso_8859_2.c
    iconv/ccs/iso_8859_3.c
    iconv/ccs/iso_8859_4.c
    iconv/ccs/iso_8859_5.c
    iconv/ccs/iso_8859_6.c
    iconv/ccs/iso_8859_7.c
    iconv/ccs/iso_8859_8.c
    iconv/ccs/iso_8859_9.c
    iconv/ccs/iso_ir_111.c
    iconv/ccs/jis_x0201_1976.c
    iconv/ccs/jis_x0208_1990.c
    iconv/ccs/jis_x0212_1990.c
    iconv/ccs/koi8_r.c
    iconv/ccs/koi8_ru.c
    iconv/ccs/koi8_u.c
    iconv/ccs/koi8_uni.c
    iconv/ccs/ksx1001.c
    iconv/ccs/win_1250.c
    iconv/ccs/win_1251.c
    iconv/ccs/win_1252.c
    iconv/ccs/win_1253.c
    iconv/ccs/win_1254.c
    iconv/ccs/win_1255.c
    iconv/ccs/win_1256.c
    iconv/ccs/win_1257.c
    iconv/ccs/win_1258.c
    iconv/ces/cesbi.c
    iconv/ces/euc.c
    iconv/ces/table-pcs.c
    iconv/ces/table.c
    iconv/ces/ucs-2-internal.c
    iconv/ces/ucs-2.c
    iconv/ces/ucs-4-internal.c
    iconv/ces/ucs-4.c
    iconv/ces/us-ascii.c
    iconv/ces/utf-16.c
    iconv/ces/utf-8.c
    iconv/lib/aliasesbi.c
    iconv/lib/aliasesi.c
    iconv/lib/iconv.c
    iconv/lib/iconvnls.c
    iconv/lib/nullconv.c
    iconv/lib/ucsconv.c
    misc/lock.c
    signal/raise.c
    signal/signal.c
    xdr/xdr.c
    xdr/xdr_array.c
    xdr/xdr_float.c
    xdr/xdr_float_vax.c
    xdr/xdr_mem.c
    xdr/xdr_private.c
    xdr/xdr_rec.c
    xdr/xdr_reference.c
    xdr/xdr_sizeof.c
    xdr/xdr_stdio.c
)

set(HEADERS
    ${HEADERS}
    include/_ansi.h
    include/_newlib_version.h
    include/_syslist.h
    include/alloca.h
    include/ar.h
    include/argz.h
    include/assert.h
    include/complex.h
    include/cpio.h
    include/ctype.h
    include/devctl.h
    include/dirent.h
    include/elf.h
    include/envlock.h
    include/envz.h
    include/errno.h
    include/fastmath.h
    include/fcntl.h
    include/fnmatch.h
    include/getopt.h
    include/glob.h
    include/grp.h
    include/iconv.h
    include/ieeefp.h
    include/inttypes.h
    include/langinfo.h
    include/libgen.h
    include/limits.h
    include/locale.h
    include/malloc.h
    include/math.h
    include/memory.h
    include/netdb.h
    include/newlib.h
    include/paths.h
    include/pwd.h
    include/reent.h
    include/regdef.h
    include/regex.h
    include/sched.h
    include/search.h
    include/setjmp.h
    include/signal.h
    include/stdatomic.h
    include/stdint.h
    include/stdio.h
    include/stdio_ext.h
    include/stdlib.h
    include/string.h
    include/strings.h
    include/tar.h
    include/termios.h
    include/tgmath.h
    include/threads.h
    include/time.h
    include/unctrl.h
    include/unistd.h
    include/utime.h
    include/utmp.h
    include/wchar.h
    include/wctype.h
    include/wordexp.h
    include/xlocale.h
)

set(HEADERS_SSP
    ${HEADERS_SSP}
    include/ssp/ssp.h
    include/ssp/stdio.h
    include/ssp/stdlib.h
    include/ssp/string.h
    include/ssp/strings.h
    include/ssp/unistd.h
    include/ssp/wchar.h
)

set(HEADERS_MACHINE
    ${HEADERS_MACHINE}
    include/machine/_arc4random.h
    include/machine/_default_types.h
    include/machine/_endian.h
    include/machine/_time.h
    include/machine/_types.h
    include/machine/ansi.h
    include/machine/endian.h
    include/machine/fastmath.h
    include/machine/ieeefp.h
    include/machine/malloc.h
    include/machine/param.h
    include/machine/setjmp.h
    include/machine/stdlib.h
    include/machine/termios.h
    include/machine/time.h
    include/machine/types.h
)

set(HEADERS_SYS
    ${HEADERS_SYS}
    include/sys/_default_fcntl.h
    include/sys/_intsup.h
    include/sys/_pthreadtypes.h
    include/sys/_stdint.h
    include/sys/_timespec.h
    include/sys/_timeval.h
    include/sys/_types.h
    include/sys/cdefs.h
    include/sys/config.h
    include/sys/custom_file.h
    include/sys/dir.h
    include/sys/errno.h
    include/sys/fcntl.h
    include/sys/features.h
    include/sys/file.h
    include/sys/iconvnls.h
    include/sys/lock.h
    include/sys/param.h
    include/sys/queue.h
    include/sys/reent.h
    include/sys/resource.h
    include/sys/sched.h
    include/sys/select.h
    include/sys/stat.h
    include/sys/stdio.h
    include/sys/string.h
    include/sys/syslimits.h
    include/sys/time.h
    include/sys/timeb.h
    include/sys/times.h
    include/sys/timespec.h
    include/sys/tree.h
    include/sys/types.h
    include/sys/unistd.h
    include/sys/utime.h
    include/sys/utsname.h
    include/sys/wait.h
    sys/dogfood/sys/dirent.h
    sys/dogfood/sys/errno.h
    sys/dogfood/sys/ioctl.h
    sys/dogfood/sys/mman.h
    sys/dogfood/sys/mount.h
    sys/dogfood/sys/ptrace.h
    sys/dogfood/sys/signal.h
    sys/dogfood/sys/socket.h
    sys/dogfood/sys/termios.h
    sys/dogfood/sys/un.h
)
set(HEADERS_RPC
    ${HEADERS_RPC}
    include/rpc/types.h
    include/rpc/xdr.h
)
set(HEADERS_ARPA
    include/arpa/inet.h
)
set(HEADERS_NETINET
    include/netinet/in.h
    include/netinet/tcp.h
)

# add libM
set(SOURCES
    ${SOURCES}
    ../libm/math/k_standard.c
    ../libm/math/k_rem_pio2.c
    ../libm/math/k_cos.c
    ../libm/math/k_sin.c
    ../libm/math/k_tan.c
    ../libm/math/e_acos.c
    ../libm/math/e_acosh.c
    ../libm/math/e_asin.c
    ../libm/math/e_atan2.c
    ../libm/math/e_atanh.c
    ../libm/math/e_cosh.c
    ../libm/math/e_exp.c
    ../libm/math/e_fmod.c
    ../libm/math/er_gamma.c
    ../libm/math/e_hypot.c
    ../libm/math/e_j0.c
    ../libm/math/e_j1.c
    ../libm/math/e_jn.c
    ../libm/math/er_lgamma.c
    ../libm/math/e_log.c
    ../libm/math/e_log10.c
    ../libm/math/e_pow.c
    ../libm/math/e_rem_pio2.c
    ../libm/math/e_remainder.c
    ../libm/math/e_scalb.c
    ../libm/math/e_sinh.c
    ../libm/math/e_sqrt.c
    ../libm/math/w_acos.c
    ../libm/math/w_acosh.c
    ../libm/math/w_asin.c
    ../libm/math/w_atan2.c
    ../libm/math/w_atanh.c
    ../libm/math/w_cosh.c
    ../libm/math/w_exp.c
    ../libm/math/w_fmod.c
    ../libm/math/w_gamma.c
    ../libm/math/wr_gamma.c
    ../libm/math/w_hypot.c
    ../libm/math/w_j0.c
    ../libm/math/w_j1.c
    ../libm/math/w_jn.c
    ../libm/math/w_lgamma.c
    ../libm/math/wr_lgamma.c
    ../libm/math/w_log.c
    ../libm/math/w_log10.c
    ../libm/math/w_pow.c
    ../libm/math/w_remainder.c
    ../libm/math/w_scalb.c
    ../libm/math/w_sinh.c
    ../libm/math/w_sqrt.c
    ../libm/math/w_sincos.c
    ../libm/math/w_drem.c
    ../libm/math/s_asinh.c
    ../libm/math/s_atan.c
    ../libm/math/s_ceil.c
    ../libm/math/s_cos.c
    ../libm/math/s_erf.c
    ../libm/math/s_fabs.c
    ../libm/math/s_floor.c
    ../libm/math/s_frexp.c
    ../libm/math/s_ldexp.c
    ../libm/math/s_signif.c
    ../libm/math/s_sin.c
    ../libm/math/s_tan.c
    ../libm/math/s_tanh.c
    ../libm/math/w_exp2.c
    ../libm/math/w_tgamma.c
    ../libm/math/kf_rem_pio2.c
    ../libm/math/kf_cos.c
    ../libm/math/kf_sin.c
    ../libm/math/kf_tan.c
    ../libm/math/ef_acos.c
    ../libm/math/ef_acosh.c
    ../libm/math/ef_asin.c
    ../libm/math/ef_atan2.c
    ../libm/math/ef_atanh.c
    ../libm/math/ef_cosh.c
    ../libm/math/ef_exp.c
    ../libm/math/ef_fmod.c
    ../libm/math/erf_gamma.c
    ../libm/math/ef_hypot.c
    ../libm/math/ef_j0.c
    ../libm/math/ef_j1.c
    ../libm/math/ef_jn.c
    ../libm/math/erf_lgamma.c
    ../libm/math/ef_log.c
    ../libm/math/ef_log10.c
    ../libm/math/ef_pow.c
    ../libm/math/ef_rem_pio2.c
    ../libm/math/ef_remainder.c
    ../libm/math/ef_scalb.c
    ../libm/math/ef_sinh.c
    ../libm/math/ef_sqrt.c
    ../libm/math/wf_acos.c
    ../libm/math/wf_acosh.c
    ../libm/math/wf_asin.c
    ../libm/math/wf_atan2.c
    ../libm/math/wf_atanh.c
    ../libm/math/wf_cosh.c
    ../libm/math/wf_exp.c
    ../libm/math/wf_fmod.c
    ../libm/math/wf_gamma.c
    ../libm/math/wrf_gamma.c
    ../libm/math/wf_hypot.c
    ../libm/math/wf_j0.c
    ../libm/math/wf_j1.c
    ../libm/math/wf_jn.c
    ../libm/math/wf_lgamma.c
    ../libm/math/wrf_lgamma.c
    ../libm/math/wf_log.c
    ../libm/math/wf_log10.c
    ../libm/math/wf_pow.c
    ../libm/math/wf_remainder.c
    ../libm/math/wf_scalb.c
    ../libm/math/wf_sinh.c
    ../libm/math/wf_sqrt.c
    ../libm/math/wf_sincos.c
    ../libm/math/wf_drem.c
    ../libm/math/sf_asinh.c
    ../libm/math/sf_atan.c
    ../libm/math/sf_ceil.c
    ../libm/math/sf_cos.c
    ../libm/math/sf_erf.c
    ../libm/math/sf_fabs.c
    ../libm/math/sf_floor.c
    ../libm/math/sf_frexp.c
    ../libm/math/sf_ldexp.c
    ../libm/math/sf_signif.c
    ../libm/math/sf_sin.c
    ../libm/math/sf_tan.c
    ../libm/math/sf_tanh.c
    ../libm/math/wf_exp2.c
    ../libm/math/wf_tgamma.c
    ../libm/math/wf_log2.c
    ../libm/math/el_hypot.c
    ../libm/common/s_finite.c
    ../libm/common/s_copysign.c
    ../libm/common/s_modf.c
    ../libm/common/s_scalbn.c
    ../libm/common/s_cbrt.c
    ../libm/common/s_exp10.c
    ../libm/common/s_expm1.c
    ../libm/common/s_ilogb.c
    ../libm/common/s_infinity.c
    ../libm/common/s_isinf.c
    ../libm/common/s_isinfd.c
    ../libm/common/s_isnan.c
    ../libm/common/s_isnand.c
    ../libm/common/s_log1p.c
    ../libm/common/s_nan.c
    ../libm/common/s_nextafter.c
    ../libm/common/s_pow10.c
    ../libm/common/s_rint.c
    ../libm/common/s_logb.c
    ../libm/common/s_log2.c
    ../libm/common/s_matherr.c
    ../libm/common/s_lib_ver.c
    ../libm/common/s_fdim.c
    ../libm/common/s_fma.c
    ../libm/common/s_fmax.c
    ../libm/common/s_fmin.c
    ../libm/common/s_fpclassify.c
    ../libm/common/s_lrint.c
    ../libm/common/s_llrint.c
    ../libm/common/s_lround.c
    ../libm/common/s_llround.c
    ../libm/common/s_nearbyint.c
    ../libm/common/s_remquo.c
    ../libm/common/s_round.c
    ../libm/common/s_scalbln.c
    ../libm/common/s_signbit.c
    ../libm/common/s_trunc.c
    ../libm/common/exp.c
    ../libm/common/exp2.c
    ../libm/common/exp_data.c
    ../libm/common/math_err.c
    ../libm/common/log.c
    ../libm/common/log_data.c
    ../libm/common/log2.c
    ../libm/common/log2_data.c
    ../libm/common/pow.c
    ../libm/common/pow_log_data.c
    ../libm/common/sf_finite.c
    ../libm/common/sf_copysign.c
    ../libm/common/sf_modf.c
    ../libm/common/sf_scalbn.c
    ../libm/common/sf_cbrt.c
    ../libm/common/sf_exp10.c
    ../libm/common/sf_expm1.c
    ../libm/common/sf_ilogb.c
    ../libm/common/sf_infinity.c
    ../libm/common/sf_isinf.c
    ../libm/common/sf_isinff.c
    ../libm/common/sf_isnan.c
    ../libm/common/sf_isnanf.c
    ../libm/common/sf_log1p.c
    ../libm/common/sf_nan.c
    ../libm/common/sf_nextafter.c
    ../libm/common/sf_pow10.c
    ../libm/common/sf_rint.c
    ../libm/common/sf_logb.c
    ../libm/common/sf_fdim.c
    ../libm/common/sf_fma.c
    ../libm/common/sf_fmax.c
    ../libm/common/sf_fmin.c
    ../libm/common/sf_fpclassify.c
    ../libm/common/sf_lrint.c
    ../libm/common/sf_llrint.c
    ../libm/common/sf_lround.c
    ../libm/common/sf_llround.c
    ../libm/common/sf_nearbyint.c
    ../libm/common/sf_remquo.c
    ../libm/common/sf_round.c
    ../libm/common/sf_scalbln.c
    ../libm/common/sf_trunc.c
    ../libm/common/sf_exp.c
    ../libm/common/sf_exp2.c
    ../libm/common/sf_exp2_data.c
    ../libm/common/sf_log.c
    ../libm/common/sf_log_data.c
    ../libm/common/sf_log2.c
    ../libm/common/sf_log2_data.c
    ../libm/common/sf_pow_log2_data.c
    ../libm/common/sf_pow.c
    ../libm/common/sinf.c
    ../libm/common/cosf.c
    ../libm/common/sincosf.c
    ../libm/common/sincosf_data.c
    ../libm/common/math_errf.c
    ../libm/common/atanl.c
    ../libm/common/cosl.c
    ../libm/common/sinl.c
    ../libm/common/tanl.c
    ../libm/common/tanhl.c
    ../libm/common/frexpl.c
    ../libm/common/modfl.c
    ../libm/common/ceill.c
    ../libm/common/fabsl.c
    ../libm/common/floorl.c
    ../libm/common/log1pl.c
    ../libm/common/expm1l.c
    ../libm/common/acosl.c
    ../libm/common/asinl.c
    ../libm/common/atan2l.c
    ../libm/common/coshl.c
    ../libm/common/sinhl.c
    ../libm/common/expl.c
    ../libm/common/ldexpl.c
    ../libm/common/logl.c
    ../libm/common/log10l.c
    ../libm/common/powl.c
    ../libm/common/sqrtl.c
    ../libm/common/fmodl.c
    ../libm/common/hypotl.c
    ../libm/common/copysignl.c
    ../libm/common/nanl.c
    ../libm/common/ilogbl.c
    ../libm/common/asinhl.c
    ../libm/common/cbrtl.c
    ../libm/common/nextafterl.c
    ../libm/common/rintl.c
    ../libm/common/scalbnl.c
    ../libm/common/exp2l.c
    ../libm/common/scalblnl.c
    ../libm/common/tgammal.c
    ../libm/common/nearbyintl.c
    ../libm/common/lrintl.c
    ../libm/common/llrintl.c
    ../libm/common/roundl.c
    ../libm/common/lroundl.c
    ../libm/common/llroundl.c
    ../libm/common/truncl.c
    ../libm/common/remquol.c
    ../libm/common/fdiml.c
    ../libm/common/fmaxl.c
    ../libm/common/fminl.c
    ../libm/common/fmal.c
    ../libm/common/acoshl.c
    ../libm/common/atanhl.c
    ../libm/common/remainderl.c
    ../libm/common/lgammal.c
    ../libm/common/erfl.c
    ../libm/common/erfcl.c
    ../libm/common/logbl.c
    ../libm/common/nexttowardf.c
    ../libm/common/nexttoward.c
    ../libm/common/nexttowardl.c
    ../libm/common/log2l.c
    ../libm/common/sl_finite.c
    ../libm/complex/cabs.c
    ../libm/complex/cacos.c
    ../libm/complex/cacosh.c
    ../libm/complex/carg.c
    ../libm/complex/casin.c
    ../libm/complex/casinh.c
    ../libm/complex/catan.c
    ../libm/complex/catanh.c
    ../libm/complex/ccos.c
    ../libm/complex/ccosh.c
    ../libm/complex/cephes_subr.c
    ../libm/complex/cexp.c
    ../libm/complex/cimag.c
    ../libm/complex/clog.c
    ../libm/complex/clog10.c
    ../libm/complex/conj.c
    ../libm/complex/cpow.c
    ../libm/complex/cproj.c
    ../libm/complex/creal.c
    ../libm/complex/csin.c
    ../libm/complex/csinh.c
    ../libm/complex/csqrt.c
    ../libm/complex/ctan.c
    ../libm/complex/ctanh.c
    ../libm/complex/cabsf.c
    ../libm/complex/casinf.c
    ../libm/complex/ccosf.c
    ../libm/complex/cimagf.c
    ../libm/complex/cprojf.c
    ../libm/complex/csqrtf.c
    ../libm/complex/cacosf.c
    ../libm/complex/casinhf.c
    ../libm/complex/ccoshf.c
    ../libm/complex/clogf.c
    ../libm/complex/clog10f.c
    ../libm/complex/crealf.c
    ../libm/complex/ctanf.c
    ../libm/complex/cacoshf.c
    ../libm/complex/catanf.c
    ../libm/complex/cephes_subrf.c
    ../libm/complex/conjf.c
    ../libm/complex/csinf.c
    ../libm/complex/ctanhf.c
    ../libm/complex/cargf.c
    ../libm/complex/catanhf.c
    ../libm/complex/cexpf.c
    ../libm/complex/cpowf.c
    ../libm/complex/csinhf.c
    ../libm/complex/cabsl.c
    ../libm/complex/creall.c
    ../libm/complex/cimagl.c
    ../libm/complex/ccoshl.c
    ../libm/complex/cacoshl.c
    ../libm/complex/clogl.c
    ../libm/complex/csqrtl.c
    ../libm/complex/cargl.c
    ../libm/complex/cprojl.c
    ../libm/complex/cexpl.c
    ../libm/complex/cephes_subrl.c
    ../libm/complex/cacosl.c
    ../libm/complex/ccosl.c
    ../libm/complex/casinl.c
    ../libm/complex/catanhl.c
    ../libm/complex/conjl.c
    ../libm/complex/cpowl.c
    ../libm/complex/ctanhl.c
    ../libm/complex/ctanl.c
    ../libm/complex/casinhl.c
    ../libm/complex/csinhl.c
    ../libm/complex/csinl.c
    ../libm/complex/catanl.c
)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -isystem ${CMAKE_CURRENT_SOURCE_DIR}/sys/dogfood")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -isystem ${CMAKE_CURRENT_SOURCE_DIR}/include")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -isystem ${CMAKE_SOURCE_DIR}/include")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -isystem ${CMAKE_SOURCE_DIR}/../../kernel-headers/include")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I. -I${CMAKE_CURRENT_SOURCE_DIR}/../libm/common")
set(CMAKE_ASM_FLAGS "${CMAKE_C_FLAGS}")
add_library(c STATIC ${SOURCES})

add_library(crt0 OBJECT sys/dogfood/crt0.c)
install(FILES $<TARGET_OBJECTS:crt0> RENAME crt0.o DESTINATION usr/lib)

install(FILES ${HEADERS} DESTINATION usr/include)
install(FILES ${HEADERS_SSP} DESTINATION usr/include/ssp)
install(FILES ${HEADERS_MACHINE} DESTINATION usr/include/machine)
install(FILES ${HEADERS_SYS} DESTINATION usr/include/sys)
install(FILES ${HEADERS_RPC} DESTINATION usr/include/rpc)
install(FILES ${HEADERS_ARPA} DESTINATION usr/include/arpa)
install(FILES ${HEADERS_NETINET} DESTINATION usr/include/netinet)

install(TARGETS c DESTINATION usr/lib)
